--- a/project/skyway_android_sdk/app/src/main/res/layout/activity_chanel_details.xml
+++ b/project/skyway_android_sdk/app/src/main/res/layout/activity_chanel_details.xml
@@ -144,6 +144,13 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/btnCustomVideo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Custom\nVideo" />
+
+                <Button
                     android:id="@+id/btnToggleSubEncoding"
                     android:layout_width="107dp"
                     android:layout_height="wrap_content"
