--- a/project/skyway_android_sdk/app/src/main/res/layout/activity_chanel_details.xml
+++ b/project/skyway_android_sdk/app/src/main/res/layout/activity_chanel_details.xml
@@ -162,6 +162,13 @@
                     android:text="Change sub encoding"
                     android:textSize="12sp" />
 
+                <Button
+                    android:id="@+id/btnReplaceStream"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Replace\nStream" />
+
             </LinearLayout>
 
             <LinearLayout
