--- a/project/skyway_android_sdk/app/src/main/res/layout/activity_sfu_room_details.xml
+++ b/project/skyway_android_sdk/app/src/main/res/layout/activity_sfu_room_details.xml
@@ -14,8 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-
-    <LinearLayout
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -90,12 +89,35 @@
                 android:layout_marginLeft="10dp"
                 android:text="UnPublish"/>
 
-
-
-
-
         </LinearLayout>
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnAudio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="audio" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnUpdateEncoding"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="UpdateEncoding" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -112,16 +134,10 @@
 
             <Button
                 android:id="@+id/btn_change_encoding"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
-                android:insetLeft="0dp"
-                android:insetRight="0dp"
-                android:layout_marginStart="10dp"
-                android:textSize="9sp"
                 android:text="change encoding" />
 
 
