--- a/examples/QuickStart/app/src/main/res/layout/activity_main.xml
+++ b/examples/QuickStart/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,99 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- ローカルのビデオ -->
-        <com.ntt.skyway.core.content.sink.SurfaceViewRenderer
-            android:id="@+id/local_renderer"
-            android:layout_width="150dp"
-            android:layout_height="150dp" />
+        <LinearLayout
+            android:id="@+id/room"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <!-- リモートのビデオ -->
-        <com.ntt.skyway.core.content.sink.SurfaceViewRenderer
-            android:id="@+id/remote_renderer"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="20dp" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:text="Room Name:" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/roomName"
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:text="room_name" />
+
+                <Button
+                    android:id="@+id/btnJoinRoom"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:text="join" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/message_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Send Message" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/message"
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Hello from Android!" />
+
+                <Button
+                    android:id="@+id/btnSnedMessage"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="send" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/videos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!-- ローカルのビデオ -->
+            <com.ntt.skyway.core.content.sink.SurfaceViewRenderer
+                android:id="@+id/local_renderer"
+                android:layout_width="150dp"
+                android:layout_height="150dp">
+
+            </com.ntt.skyway.core.content.sink.SurfaceViewRenderer>
+
+            <!-- リモートのビデオ -->
+            <com.ntt.skyway.core.content.sink.SurfaceViewRenderer
+                android:id="@+id/remote_renderer"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginStart="20dp">
+
+            </com.ntt.skyway.core.content.sink.SurfaceViewRenderer>
+        </LinearLayout>
 
     </LinearLayout>
 
