--- a/project/skyway_android_sdk/app/src/main/res/layout/activity_room_details.xml
+++ b/project/skyway_android_sdk/app/src/main/res/layout/activity_room_details.xml
@@ -143,6 +143,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_update_encoding"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="UpdateEncoding" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
