--- a/project/skyway_android_sdk/app/src/main/res/layout/list_item_channel_publication.xml
+++ b/project/skyway_android_sdk/app/src/main/res/layout/list_item_channel_publication.xml
@@ -41,128 +41,157 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_alignParentStart="true">
+                    android:layout_alignParentStart="true"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="publisher: "/>
+                        android:text="publisher: " />
 
                     <TextView
                         android:id="@+id/tv_publisher_name"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:text="user1" />
+
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="user1"/>
+                        android:text="type: " />
+
+                    <TextView
+                        android:id="@+id/tv_publication_type"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:text="video" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_alignParentStart="true">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="type: "/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_publication_type"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="video"/>
+                        <Button
+                            android:id="@+id/btn_start_forwarding"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="FWD"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_update_encoding"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="ENC"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_change_encoding"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="ENC"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_enable"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="ENB"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_disable"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="DIS"
+                            android:textSize="10sp" />
+
+                        <Button
+                            android:id="@+id/btn_subscribe"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="Sub"
+                            android:textSize="10sp" />
+
+                        <Button
+                            android:id="@+id/btn_unsubscribe"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="unsub"
+                            android:textSize="10sp" />
+
+                        <Button
+                            android:id="@+id/btn_unpublish"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="unpub"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/btn_send_data"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="Send"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_replace_stream"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="Replace"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
 
             </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true">
-
-                <Button
-                    android:id="@+id/btn_start_forwarding"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:insetLeft="0dp"
-                    android:insetTop="0dp"
-                    android:insetRight="0dp"
-                    android:insetBottom="0dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:text="Forward"
-                    android:textSize="9sp"
-                    android:visibility="visible" />
-
-                <Button
-                    android:id="@+id/btn_enable"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:insetLeft="0dp"
-                    android:insetTop="0dp"
-                    android:insetRight="0dp"
-                    android:insetBottom="0dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:text="Enable"
-                    android:textSize="9sp"
-                    android:visibility="visible" />
-
-                <Button
-                    android:id="@+id/btn_disable"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:insetLeft="0dp"
-                    android:insetTop="0dp"
-                    android:insetRight="0dp"
-                    android:insetBottom="0dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:text="Disable"
-                    android:textSize="9sp"
-                    android:visibility="visible" />
-
-                <Button
-                    android:id="@+id/btn_subscribe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:insetTop="0dp"
-                    android:insetBottom="0dp"
-                    android:insetLeft="0dp"
-                    android:insetRight="0dp"
-                    android:textSize="9sp"
-                    android:text="Sub" />
-
-                <Button
-                    android:id="@+id/btn_unsubscribe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:insetTop="0dp"
-                    android:insetBottom="0dp"
-                    android:insetLeft="0dp"
-                    android:insetRight="0dp"
-                    android:textSize="9sp"
-                    android:visibility="gone"
-                    android:text="UnSub" />
-
-
-            </LinearLayout>
-
 
 
         </RelativeLayout>
