--- a/project/skyway_android_sdk/app/src/main/res/layout/list_item_room_publication.xml
+++ b/project/skyway_android_sdk/app/src/main/res/layout/list_item_room_publication.xml
@@ -16,140 +16,162 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/tv_publication_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="publication 1 "
-                android:layout_alignParentLeft="true"/>
-
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_alignParentStart="true">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="publisher: "/>
+                        android:text="publisher: " />
 
                     <TextView
                         android:id="@+id/tv_publisher_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:text="user1"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_alignParentStart="true">
+                        android:singleLine="true"
+                        android:text="user1" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="type: "/>
+                        android:text="type: " />
 
                     <TextView
                         android:id="@+id/tv_publication_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="video"/>
+                        android:singleLine="true"
+                        android:text="video" />
+
 
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/tv_publication_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="publication 1 " />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/btn_send_data"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="SEND"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_change_encoding"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="ENC"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_update_encoding"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="ENC"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_replace_stream"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="Replace"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_enable"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="ENB"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_disable"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="DIS"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+                        <Button
+                            android:id="@+id/btn_subscribe"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="Sub"
+                            android:textSize="10sp" />
+
+                        <Button
+                            android:id="@+id/btn_unsubscribe"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="UnSub"
+                            android:textSize="10sp" />
+
+                        <Button
+                            android:id="@+id/btn_unpublish"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:text="unpub"
+                            android:textSize="10sp"
+                            android:visibility="visible" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                    </LinearLayout>
+                </LinearLayout>
 
             </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true">
-
-                <Button
-                    android:id="@+id/btn_enable"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:insetLeft="0dp"
-                    android:insetTop="0dp"
-                    android:insetRight="0dp"
-                    android:insetBottom="0dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:text="Enable"
-                    android:textSize="9sp"
-                    android:visibility="visible" />
-
-                <Button
-                    android:id="@+id/btn_disable"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:insetLeft="0dp"
-                    android:insetTop="0dp"
-                    android:insetRight="0dp"
-                    android:insetBottom="0dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:text="Disable"
-                    android:textSize="9sp"
-                    android:visibility="visible" />
-
-                <Button
-                    android:id="@+id/btn_subscribe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:insetTop="0dp"
-                    android:insetBottom="0dp"
-                    android:insetLeft="0dp"
-                    android:insetRight="0dp"
-                    android:textSize="9sp"
-                    android:text="Sub" />
-
-                <Button
-                    android:id="@+id/btn_unsubscribe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:insetTop="0dp"
-                    android:insetBottom="0dp"
-                    android:insetLeft="0dp"
-                    android:insetRight="0dp"
-                    android:textSize="9sp"
-                    android:visibility="gone"
-                    android:text="UnSub" />
-
-
-            </LinearLayout>
-
 
 
         </RelativeLayout>
