--- a/project/skyway_android_sdk/app/src/main/res/layout/list_item_user.xml
+++ b/project/skyway_android_sdk/app/src/main/res/layout/list_item_user.xml
@@ -15,7 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="user1"/>
+            android:singleLine="true"
+            android:text="user1" />
 
         <View
             android:layout_width="match_parent"
