--- a/examples/AutoSubscribe/app/src/main/res/layout/list_item_surface_view_renderer.xml
+++ b/examples/AutoSubscribe/app/src/main/res/layout/list_item_surface_view_renderer.xml
@@ -4,19 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="2dp"
     app:cardElevation="6dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="5dp">
+        android:orientation="vertical">
 
         <com.ntt.skyway.core.content.sink.SurfaceViewRenderer
             android:id="@+id/remote_renderer_item"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="@color/purple_200"/>
 
         <TextView
